Test/Prop/Cong.expected
goal: p = q → f p = f q

query:
(declare-fun f (Bool) Bool)
(declare-const p Bool)
(declare-const q Bool)
(assert (not (=> (= p q) (= (f p) (f q)))))
(check-sat)
Test/Prop/Cong.lean:3:67: error: unsolved goals
p q : Prop
f : Prop → Prop
⊢ p = q → f p = f q
